--- a/Inicio.html
+++ b/Inicio.html
@@ -20,7 +20,7 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark" id="Navbar"></nav>
 
-    <hr>   
+    <hr>
     <!-- CABECERA -->
     <header class="cabecera">
       <h2>¡Grandes Noticias Hoy!</h2>
@@ -49,17 +49,16 @@
         </section>
       </div>
 
-
-      <!-- Banner 2 dorado-->
+      <!-- Formulario-->
       <div class="spaced-div">
         <section class="banner banner-tarjetas-dos " id="Banner2">
-          <div class="container">
-            <h2>Lorem ipsum dolor.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut qui laudantium id quam magni accusantium,
-              veritatis, ipsam labore, reprehenderit dolore repudiandae nemo sint deserunt! Suscipit facilis qui
-              inventore
-              consequatur fugit.</p>
-            <a href="#" class="boton">Más información <i class="fas fa-chevron-right"></i></a>
+
+        </section>
+      </div>
+      <!-- Tabla-->
+      <div class="spaced-div">
+        <section class="banner banner-tarjetas-dos " id="Banner2">
+
         </section>
       </div>
 
@@ -80,7 +79,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/Efectos.js"></script>
     <script type="module" src="js/Main.js"></script>
-  
+
 </body>
 
 </html>
