--- a/Registro.html
+++ b/Registro.html
@@ -5,22 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NoticiasTecnológicas</title>
-<!-- Fuente -->
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <!-- Fuente -->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-<!-- DataTables CSS -->
-<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
+  <!-- DataTables CSS -->
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
 
-<!-- DataTables Buttons CSS -->
-<link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.4/css/buttons.dataTables.min.css">
+  <!-- DataTables Buttons CSS -->
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.4/css/buttons.dataTables.min.css">
 
-<!-- DataTables Responsive CSS -->
-<link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.3.0/css/responsive.dataTables.min.css">
+  <!-- DataTables Responsive CSS -->
+  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.3.0/css/responsive.dataTables.min.css">
 
-<!-- Font Awesome CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <!-- Font Awesome CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <!-- CSS Personalizado -->
   <link rel="stylesheet" href="css/EstilosGlobales.css">
 </head>
@@ -43,11 +43,22 @@
     <main>
 
       <!--  NOTICIAS  3- Card-->
-      <div class="row tarjetas-noticias spaced-div text-dark" id="Noticias"></div>
+      <!-- Tabla-->
+      <div class="spaced-div">
+        <section class="banner banner-tarjetas-dos " id="Banner2">
+          <div class="container mt-4">
+            <form class="form col-6 container " id="Formulario"></form>
+
+
+
+
+          </div>
+        </section>
+      </div>
 
 
       <!-- Banner 1 gris -->
-     
+
 
 
     </main>
@@ -85,7 +96,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/Efectos.js"></script>
     <script type="module" src="js/Main.js"></script>
-    <script type="module" src="js/Card.js"></script>
+    <script type="module" src="js/Registro.js"></script>
 
 </body>
 
