--- a/Tabla-Rick.html
+++ b/Tabla-Rick.html
@@ -43,7 +43,30 @@
     <main>
 
       <!--  NOTICIAS  3- Card-->
-      <div class="row tarjetas-noticias spaced-div text-dark" id="Noticias"></div>
+     <!-- Tabla-->
+     <div class="spaced-div">
+      <section class="banner banner-tarjetas-dos " id="Banner2">
+<div class="container mt-4" >
+  <table id="example" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
+    <thead>
+      <tr>
+        <th> ID</th>
+        <th> Name</th>
+        <th> Imagen</th>
+        <th> Opciones</th>
+      </tr>
+    </thead>
+    <tbody id="tbody">
+     
+    </tbody>
+  </table>
+
+
+
+
+</div>
+      </section>
+    </div>>
 
 
       <!-- Banner 1 gris -->
@@ -85,7 +108,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/Efectos.js"></script>
     <script type="module" src="js/Main.js"></script>
-    <script type="module" src="js/Card.js"></script>
+    <script type="module" src="js/Tabla-Rick.js"></script>
 
 </body>
 
